--- a/.github/workflows/manual_build.yml
+++ b/.github/workflows/manual_build.yml
@@ -20,4 +20,4 @@ jobs:
      uses: actions/upload-artifact@v3
      with:
        name: Rechnung_Mahnung_erstellen.exe
-       path: ./Rechnung_Mahnung_erstellen/dist/windows
+       path: ./dist/windows
